--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,8 @@
     <color name="trans">#00FFFFFF</color>
     <color name="blue">#0080FF</color>
     <color name="delete_red">#FF0000</color>
+    <color name="gray">#757575</color>
+    <color name="green">#4CAF50</color>
+    <color name="red">#F44336</color>
 
 </resources>
